--- a/app/templates/home2.html
+++ b/app/templates/home2.html
@@ -62,7 +62,11 @@
 
  <form  action="/result" method="GET">
     <div class="form-group">
-      <label for="mathval2">Math Score 2</label>
+      <label for="ID">Student ID Number</label>
+      <input type="text" id="ID" name='ID' placeholder="12345">
+    </div>
+    <div class="form-group">
+      <label for="mathval2">Math Score</label>
       <input type="text" id="mathval2" name='math2' placeholder="[-3,3]">
     </div>
     <div class="form-group">
