--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -13,26 +13,38 @@
 
 
    <body>
-       <div class="navbar navbar-inverse navbar-fixed-top " role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">eduIntervention</a>
+   <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">edu Intervention</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/AddStudent">Use it!</a>
+                    </li>
+                    <li>
+                        <a href="/About">About</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+        <!-- /.container -->
+    </nav>
+    
   <div class="container">
     <div class="jumbotron">
         <h1>edu Intervention</h1>
@@ -51,21 +63,16 @@
     
     <form  action="/AddStudent" >
       <div>
-        <button type="submit" class="btn btn-primary">Next Student</button>
+        <button type="submit" class="btn btn-default btn-lg">Next Student</button>
       </div>
     </form>
     
     <form  action="/clear" >
       <div>
-        <button type="submit" class="btn btn-primary">Clear Student List</button>
+        <button type="submit" class="btn btn-default btn-lg">Clear Student List</button>
       </div>
     </form>
       
-    
-    </div>
-    <div class="container">
-      <!--<IMG src="../images/Behavior.eps" ALT="some text" WIDTH=320 HEIGHT=320> -->
-      <IMG src="http://pbs.twimg.com/profile_images/378800000221536589/db6ebf8e038f49a28110c84632ca3ed1_400x400.png" ALT="some text" WIDTH=320 HEIGHT=320>
     
     </div>
 
